src/test/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error.min_tait.stderr
error: could not find defining uses
  --> $DIR/type-alias-impl-trait-with-cycle-error.rs:6:12
   |
LL | type Foo = impl Fn() -> Foo;
   |            ^^^^^^^^^^^^^^^^

error: aborting due to previous error

